# LP5810-Zephyr-Driver

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
boards/: nrf52840dk_nrf52840.overlay
drivers/: CMakeLists.txt  Kconfig
drivers/led/: CMakeLists.txt  Kconfig  Kconfig.lp5810  lp5810.c
dts/bindings/: ti,lp5810.yaml
src/: main.c
